--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,10 @@
-
+.App {
+  width: 100%;
+  height: 100%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #818181;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
