added few more components

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,4 +7,6 @@
   background-color: #818181;
   font-size: 1.25rem;
   line-height: 1.5;
+  position: relative;
+  font-family: "Roboto", sans-serif;
 }
