--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -16,6 +16,7 @@
     font-family: Roboto,sans-serif;
     outline: none;
     font-size: 1.125rem;
+    width: 80%;
   }
 }
 
@@ -26,7 +27,7 @@
     position: relative;
   }
   .searchBar__search {
-    width: unset;
+    width: 100%;
   }
 }
 
