added logic for getting forecast, improved logic for getting city name on startup

--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -18,6 +18,9 @@
     font-size: 1.125rem;
     width: 80%;
   }
+  &__submitBtn {
+    cursor: pointer;
+  }
 }
 
 @media screen and (min-width: 65em) {
