--- a/src/components/AsideBar/AsideBar.module.scss
+++ b/src/components/AsideBar/AsideBar.module.scss
@@ -3,6 +3,7 @@
   height: calc(100vh - 5rem - clamp(18rem, 90vw, 30rem)/5*3);
   justify-content: center;
   margin-block-start: 1rem;
+  margin-inline-start: 1rem;
   overflow-y: scroll;
   scrollbar-width: none;
   grid-column: 2;
@@ -18,7 +19,7 @@
 @media screen and (min-width: 65em) {
   .asideBar {
     height: calc(100vh - 3rem);
-    justify-content: end;
+    justify-content: stretch;
     margin-block-start: 0;
     grid-column: 3;
     grid-row: 2;
